// Author <<=== aakashkumarjee@gmail.com ===>>

syntax = "proto3";

package KDCPackage;

service KDC {
    rpc registerWithKDC(Client) returns (registerResponse);
    rpc connectWith(ClientDetails) returns (connectionDetails);
    rpc listServers(Client) returns (ServerList);
}

message noParams{
}
message Client {
    string name = 1;
    int32 port = 2;
    string key = 3;
    int32 id = 4;
}
message ServerList {
    repeated Client list = 1;
}
message ClientDetails {
    int32 id = 1;
    string key = 2;
}
message connectionDetails {
    int32 port = 1;
    string sessionKey = 2;
    string serverMessage = 3;
    string serverKey = 4;
}
message registerResponse {
    int32 status = 1;
    string key = 2;
    int32 id = 3;
}
// Author <<=== aakashkumarjee@gmail.com ===>>
